# compani_ai

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  demo  demo_mock  main.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
deploy/: run.sh
files/: 세션 작업 가이드.md
files/develop-rule/: 00_COMMON_RULES.md  01_ORCHESTRATION_RULES.md  03_COLLABORATION_RULES.md  04_INFRASTRUCTURE_RULES.md
files/docs/: 03_ERD.md  04_SYSTEM_ARCHITECTURE.md  RUNBOOK.md
outputs/.demo_mock_template/: README.md
scripts/: benchmark_real.py  mock_pipeline.py
source_code/compani_ai/: .flake8  pyproject.toml  requirements-dev.txt
src/adapters/: anthropic_provider.py  errors.py  event_bus.py  file_storage.py  gemini_provider.py  mock_llm_provider.py  mock_workspace.py  ollama_provider.py  openai_provider.py  qdrant_storage.py  redis_cache.py  shared_workspace.py  sqlite_message_queue.py  sqlite_storage.py
src/application/: __init__.py  agent_factory.py  backend_agent.py  base_agent.py  concurrency.py  cto_agent.py  dna_manager.py  emergency_meeting.py  frontend_agent.py  knowledge_graph.py  mlops_agent.py  peer_review.py  reviewer_selector.py  rework_scheduler.py  stage_gate.py
src/domain/: __init__.py  ports.py
src/interfaces/: cli_dashboard.py
src/observability/: __init__.py  error_codes.py  ids.py  logger.py  metrics.py  tracing.py
tests/: conftest.py
tests/benchmarks/: test_pipeline_perf.py
tests/e2e/: __init__.py  harness.py  test_blog_app.py  (+4 more)
web_demo/: package-lock.json  package.json  vite.config.ts
(+241 files in other folders)
